-- TODO --
* Sort items into classes, item slot.
* Sort metal by Ref/Rec/Scrap.
* Painted tags on everything.
* Separate halloween stuff into its own category.
* _GET parameter for bbcode.
* URL shortening, get rid of .php

* Offer options in Metal Maker for only showing NV, V, etc.

* Make a steam community group?

-- CHANGELOG --

3.10.2011
  - Fixed alphabetization to compare levels correctly (Level 100 >
  Level 20). Fixed Unusual alphabetization.

3.9.2011
  - Lots of code cleanup. Still needs work though :(
  - Default alphabetical sorting.
  - Gifted and untradable tags are now always on.
  - Show hat levels option.
  - Hide gifted/untradable item options.
  - Tooltips to clarify some stuff on BBCode form.
  - Added error message on invalid Steam Community URL signin.
  - TF2 Wiki page created.

3.8.2011
  - Added dueling minigames and "action" items to BBCode tools/misc.
  - Added option to offer credits to BBCode list :)
  - Made external links open in new windows (hopefully new tabs if your
  browser is worth its salt)
  
3.7.2011
  - Added check for Genuine items (and Community and Valve and Self-Made)...
  - Added Dirty/Clean check for UHHH, Voodoo Juju, Spine-Chilling Skull.
  - Added Hero's Hachimaki and Genuine quality check for hats.
  - Gifted tag for UHHH, Skull, Juju.
  - Crates now arranged alphabetically.
  - Fix: promo weapons now caught by "only show dupes" option in BBCode.

3.3.2011
  - Fixed a bug with primary and secondary slot tokens being classified
  as weapons. They have "item_slot" = "primary" and "secondary"...
  - Added preliminary about page.

3.2.2011
  - Set up subversion. :D
  - Hacked all day, got the Metal Maker implementation done! Statistics could 
  use some work, as well as layout...
  - Did a little hack on metal_output.css that fixes the weird pixel offset on
  the right side of screens... hopefully I can investigate and figure this out.

2.24.2011
  - Fixed bug on Unusual hats not coming first in precedence.